# Hyperwarp

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  build_all.sh  flamegraph_fix.sh  glue.c  main.c  preglue.c  rgba_test.py  run.sh  run_celeste.sh  shim.c  stream.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: hooking.md  protocol.md
experiments/: udp_client.sh  udp_server.sh  udp_server_2.sh  udp_server_3.sh
hyperwarp/: .gitignore  Cargo.toml  Makefile  TODO.md  build.rs  check_env.sh  glue.c  glue_header.c  parse_sdl_dynapi_headers.py  rgba_test.py  run.sh  run_celeste.sh  run_vg.sh  sdl2_dynapi_unity.h  shim.c  update_sdl_dynapi_func_defs.sh
hyperwarp/src/: bind.rs  constants.rs  host.rs  lib.rs  utils.rs
hyperwarp/src/bind/: sdl2.rs  sdl2_safe.rs  xlib.rs
hyperwarp/src/constants/: sdl2.rs  xlib.rs
hyperwarp/src/hooks/: dlsym.rs  egl.rs  glfw.rs  glx.rs  sdl2.rs  xlib.rs
hyperwarp/src/host/: host_behavior.rs  hosting.rs  input.rs  window.rs
hyperwarp/src/host/transports/: null.rs
hyperwarp/src/platform/: sdl2.rs
hyperwarp/src/shim/: launch.rs
hyperwarp/src/streamer/: main.rs
hyperwarp/src/utils/: config.rs  manual_types.rs  pointer.rs  sdl2_dynapi.rs  sdl2_dynapi_helper.rs  utils.rs
src/: bind.rs  hooks.rs  host.rs  lib.rs  standalone.rs  utils.rs
src/bind/: gl.rs  gl_safe.rs  sdl2.rs
src/constants/: sdl2.rs
src/hooks/: dlsym.rs  egl.rs  glx.rs  sdl2.rs  xlib.rs
src/host/: connection.rs  feature_flags.rs  host_behavior.rs  hosting.rs  message.rs
src/host/transports/: mod.rs  null.rs  unix.rs
src/shim/: launch.rs
src/streamer/: main.rs
src/utils/: config.rs  manual_types.rs  pointer.rs  redhook_modif.rs  utils.rs
stellar_protocol/: Cargo.toml
stellar_protocol/src/: lib.rs  protocol.rs  util.rs
stellar_shared/: Cargo.toml
stellar_shared/src/: constants.rs  lib.rs  vendor.rs
stellar_shared/src/constants/: linux.rs  sdl2.rs
streamerd/: .gitignore  Cargo.toml  profile.sh  show_gst_debug_dots.sh  test_socket.sh
streamerd/src/: main.rs  producer.rs  streamerd.rs  test.rs  vendor.rs  webrtc.rs
