[package]
name = "hyperwarp"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "2.0"
libc = "0.2"
lazy_static = "1.4.0"
gl = "0.14.0"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.13.1"
tokio = { version = "1", features = ["full"] }

[lib]
name = "hyperwarphooker"
crate_type = ["dylib"]

[[bin]]
name = "streamerd"
path = "src/streamer/main.rs"