[package]
name = "hyperwarp"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "2.0"
libc = "0.2"
lazy_static = "1.4.0"
gl = "0.14.0"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.13.1"
tokio = { version = "1", features = ["full"] }
# We don't need message-io websocket for now.
message-io = { git = "https://github.com/javaarchive/message-io", version = "0.18.1", features = ["udp", "tcp", "unixsocket" ], rev = "d9a6af846e3f6373e48f72a3bce6627d3cd2f90d"  }
stellar_protocol = { path = "../stellar_protocol" }
crossbeam-queue = "0.3.11"
# stellar_core = { path = "../stellar_core" }

[build-dependencies]
cc = "1.0"

[lib]
name = "hyperwarphooker"
crate_type = ["dylib", "rlib"]
