[package]
name = "hyperwarp"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/javaarchive/Hyperwarp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "2.0"
libc = "0.2"
lazy_static = "1.4.0"
gl = "0.14.0"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.13.1"
tokio = { version = "1", features = ["full"] }
# We don't need message-io websocket for now.
message-io = { git = "https://github.com/javaarchive/message-io", version = "0.18.1", default-features = false, features = ["udp", "tcp", "unixsocket" ], branch = "netaddress-type" }
stellar_protocol = { path = "../stellar_protocol" }
crossbeam-queue = "0.3.11"
human-panic = "2.0.0"
backtrace = "0.3.72"
dashmap = "6.0.1"
# stellar_core = { path = "../stellar_core" }

[build-dependencies]
cc = "1.0"

[lib]
name = "hyperwarphooker"
crate_type = ["dylib", "rlib"]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
