[package]
name = "streamerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
gio = "0.19.5"
gstreamer = "0.22.0"
gstreamer-app = "0.22.0"
gstreamer-base = "0.22.0"
gstreamer-gl = "0.22.0"
gstreamer-rtp = "0.22.5"
gstreamer-video = "0.22.5"
message-io = { git = "https://github.com/javaarchive/message-io", version = "0.18.1", default-features = false, features = ["udp", "tcp", "unixsocket" ], branch = "netaddress-type" }
# stellar_core = { path = "../stellar_core" }
stellar_protocol = { path = "../stellar_protocol" }


[patch.crates-io]
mio = { git = "https://github.com/javaarchive/mio.git", branch = "messageio-patches" }

[patch.'https://github.com/javaarchive/message-io']
mio = { git = "https://github.com/javaarchive/mio.git", branch = "messageio-patches" }
